# tauri-scraper-nuxt

./: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
components/: stats.vue
components/action-panel/settings/: backend.vue  danger-zone.vue  logs.vue
components/form/: scraper.vue
components/form/scraper/: settings-file.vue  settings-mqtt.vue
components/form/settings/: mqtt-broker.vue
components/list/: scraper-info.vue
components/panel/: logs-filter.vue  mqtt-broker.vue
components/table/: scrapers.vue
composables/: useStore.ts  useTauriFetch.ts  useTauriStore.ts
layouts/: default.vue
middleware/: checkBackendOnline.global.ts
pages/: index.vue  logs.vue  scrapers.vue  settings.vue  setup.vue
pages/scrapers/: index.vue  new.vue
pages/scrapers/[id]/: edit.vue
plugins/: fileWatcher.ts  storePlugins.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-file-version/: cargo.toml
src-tauri/plugins/tauri-plugin-file-version/src/: lib.rs
src-tauri/plugins/tauri-plugin-mqtt-client/: cargo.toml
src-tauri/plugins/tauri-plugin-mqtt-client/src/: lib.rs
src-tauri/src/: logger.rs  main.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/plugins/: debouncer.rs  file_version_reader.rs  file_watcher.rs  mod.rs  mqtt_client.rs
src-tauri/src/server/router/: files.rs  info.rs  logs.rs  mod.rs  settings.rs
src-tauri/src/server/store/: mod.rs
store/: scrapers.ts
stores/: scrapers.ts
