[package]
name = "app"
version = "0.0.2-dev2"
description = "Checks files and services for version change on a windows machine."
authors = ["you"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "system-tray"] }
tokio = "1.23.0"
axum = "0.6.1"
axum-core = "0.3.0"
async-trait = "0.1.60"
clap = { version = "4.0.29", features = ["derive"] }
utoipa = { version = "2.4.2", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = "0.4.23"
notify = { version = "5.0.0", default-features = false }
futures = "0.3.25"
microkv = { version = "0.2.9", feature= ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
branch = "dev"

[dependencies.tauri-plugin-autostart]
git = "https://github.com/tauri-apps/tauri-plugin-autostart"
branch = "dev"

[dependencies.tauri-plugin-fs-watch]
git = "https://github.com/tauri-apps/tauri-plugin-fs-watch"
branch = "dev"

[dependencies.tauri-plugin-mqtt-client]
path = "./plugins/tauri-plugin-mqtt-client"

[dependencies.tauri-plugin-file-version]
path = "./plugins/tauri-plugin-file-version"
