[package]
name = "app"
version = "0.0.3-rc1"
description = "Checks files and services for version change on a windows machine."
authors = ["you"]
license = "MIT"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all", "system-tray"] }
tokio = { version = "1.24.2", features = ["rt"] }
tower-http = { version = "0.3.5", features = ["cors"] }
axum = { version = "0.6.4", features = ["headers"] }
axum-core = "0.3.2"
async-trait = "0.1.63"
clap = { version = "4.1.3", features = ["derive"] }
utoipa = { version = "2.4.2", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = "0.4.23"
notify = { version = "5.0.0", default-features = false }
futures = "0.3.25"
microkv = "0.2.9"
version_info = "0.0.5"
sha2 = "0.10.6"
rumqttc = "0.17.0"
rustls-native-certs = "0.6.2"
rustls = "0.20.8"
tokio-stream = "0.1.11"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/tauri-plugin-store"
branch = "dev"

[dependencies.tauri-plugin-autostart]
git = "https://github.com/tauri-apps/tauri-plugin-autostart"
branch = "dev"


